--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+}
+
+.root {
+  height: 100vh;
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App__content {
+  min-height: calc(100vh - 142.5px);
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App__footer {
+  background: rgb(0, 188, 212);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.MoviesCard {
+  padding: 10px;
 }
